# api-app-transport-framework

./: .gitignore  README.adoc  README.md  fhirpkg.lock.json  package.json
.devcontainer/: Dockerfile  codfsh-config.yaml  devcontainer.json
docs/: Anwendungskennzeichen.adoc
slides/introduction/: index.html
slides/reveal-js/changes/: index.html
slides/reveal-js/introduction/: index.html
slides/reveal-js/technical_introduction_20240912/: index.html
src/app_transport_framework_library/: README.md  pyproject.toml
src/app_transport_framework_library/app_transport_framework_library/: atf_bundle_processor.py  base_use_case_handler.py  base_use_case_validator.py
src/app_transport_framework_library/app_transport_framework_library/models/: bundle_content.py  bundle_focus_content.py  empfangsbestaetigung.py  message_to_send.py  service_identifier.py
src/app_transport_framework_library/app_transport_framework_library/ressource_creators/: message_bundle_creator.py  message_header_creator.py  operation_outcome_bundle_creator.py  operation_outcome_creator.py  test_message_creator.py
src/app_transport_framework_library/app_transport_framework_library/use_cases/: empfangsbestaetigung_handler.py  selbsttest_lieferung_handler.py  selbsttest_lieferung_validator.py
src/app_transport_framework_library/tests/: test_message_bundle_creator.py
src/fhir/: sushi-config.yaml
src/fhir/fsh-generated/: fsh-index.json  fsh-index.txt
src/fhir/guides/ig-atf/: toc.yaml  (+1 more)
src/poc/: LICENSE  README.md  example.py  requirements.txt
src/poc/atf_message_library/: README.md  setup.py
(+132 files in other folders)
